// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post should handle highlighting properly when jumping to pinned or flagged posts 1`] = `
<ContextProvider
  value={
    Object {
      "handlePopupOpened": [Function],
    }
  }
>
  <PostAriaLabelDiv
    aria-atomic={true}
    className="a11y__section post post--highlight post--pinned-or-flagged-highlight post--pinned-or-flagged  other--root  "
    data-testid="postView"
    id="post_post1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    post={
      Object {
        "id": "post1",
        "is_pinned": false,
      }
    }
    role="listitem"
    tabIndex={0}
  >
    <Connect(injectIntl(PostPreHeader))
      isFlagged={true}
      isPinned={false}
    />
    <div
      aria-hidden={true}
      className="post__content "
      data-testid="postContent"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={false}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
        />
      </div>
      <div>
        <Connect(PostHeader)
          colorizeUsernames={false}
          compactDisplay={false}
          handleCardClick={[Function]}
          handleCommentClick={[Function]}
          handleDropdownOpened={[Function]}
          hover={false}
          isFirstReply={true}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
          showTimeWithoutHover={true}
        />
        <AutoHeightSwitcher
          onTransitionEnd={[Function]}
          shouldScrollIntoView={false}
          showSlot={1}
          slot1={
            <React.Fragment>
              <Memo(Connect(PostBody))
                compactDisplay={false}
                handleCommentClick={[Function]}
                handleFileDropdownOpened={[Function]}
                isCommentMention={false}
                isFirstReply={true}
                post={
                  Object {
                    "id": "post1",
                    "is_pinned": false,
                  }
                }
              />
            </React.Fragment>
          }
          slot2={
            <React.Fragment>
              <Memo(Connect(EditPost)) />
            </React.Fragment>
          }
        />
      </div>
    </div>
  </PostAriaLabelDiv>
</ContextProvider>
`;

exports[`Post should handle highlighting properly when jumping to pinned or flagged posts 2`] = `
<ContextProvider
  value={
    Object {
      "handlePopupOpened": [Function],
    }
  }
>
  <PostAriaLabelDiv
    aria-atomic={true}
    className="a11y__section post post--pinned-or-flagged  other--root  "
    data-testid="postView"
    id="post_post1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    post={
      Object {
        "id": "post1",
        "is_pinned": false,
      }
    }
    role="listitem"
    tabIndex={0}
  >
    <Connect(injectIntl(PostPreHeader))
      isFlagged={true}
      isPinned={false}
    />
    <div
      aria-hidden={true}
      className="post__content "
      data-testid="postContent"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={false}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
        />
      </div>
      <div>
        <Connect(PostHeader)
          colorizeUsernames={false}
          compactDisplay={false}
          handleCardClick={[Function]}
          handleCommentClick={[Function]}
          handleDropdownOpened={[Function]}
          hover={false}
          isFirstReply={true}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
          showTimeWithoutHover={true}
        />
        <AutoHeightSwitcher
          onTransitionEnd={[Function]}
          shouldScrollIntoView={false}
          showSlot={1}
          slot1={
            <React.Fragment>
              <Memo(Connect(PostBody))
                compactDisplay={false}
                handleCommentClick={[Function]}
                handleFileDropdownOpened={[Function]}
                isCommentMention={false}
                isFirstReply={true}
                post={
                  Object {
                    "id": "post1",
                    "is_pinned": false,
                  }
                }
              />
            </React.Fragment>
          }
          slot2={
            <React.Fragment>
              <Memo(Connect(EditPost)) />
            </React.Fragment>
          }
        />
      </div>
    </div>
  </PostAriaLabelDiv>
</ContextProvider>
`;

exports[`Post should not display as comment when post is a broadcasted thread reply with CRT enabled 1`] = `
<ContextProvider
  value={
    Object {
      "handlePopupOpened": [Function],
    }
  }
>
  <PostAriaLabelDiv
    aria-atomic={true}
    className="a11y__section post  other--root  "
    data-testid="postView"
    id="post_post1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    post={
      Object {
        "id": "post1",
        "is_pinned": false,
        "props": Object {
          "broadcasted_thread_reply": true,
        },
        "root_id": "root_id_post1",
      }
    }
    role="listitem"
    tabIndex={0}
  >
    <Connect(injectIntl(PostPreHeader))
      isFlagged={false}
      isPinned={false}
    />
    <div
      aria-hidden={true}
      className="post__content "
      data-testid="postContent"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={false}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
              "props": Object {
                "broadcasted_thread_reply": true,
              },
              "root_id": "root_id_post1",
            }
          }
        />
      </div>
      <div>
        <Connect(PostHeader)
          colorizeUsernames={false}
          compactDisplay={false}
          handleCardClick={[Function]}
          handleCommentClick={[Function]}
          handleDropdownOpened={[Function]}
          hover={false}
          isFirstReply={true}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
              "props": Object {
                "broadcasted_thread_reply": true,
              },
              "root_id": "root_id_post1",
            }
          }
          showTimeWithoutHover={true}
        />
        <AutoHeightSwitcher
          onTransitionEnd={[Function]}
          shouldScrollIntoView={false}
          showSlot={1}
          slot1={
            <React.Fragment>
              <Memo(Connect(PostBody))
                compactDisplay={false}
                handleCommentClick={[Function]}
                handleFileDropdownOpened={[Function]}
                isCommentMention={false}
                isFirstReply={true}
                post={
                  Object {
                    "id": "post1",
                    "is_pinned": false,
                    "props": Object {
                      "broadcasted_thread_reply": true,
                    },
                    "root_id": "root_id_post1",
                  }
                }
              />
            </React.Fragment>
          }
          slot2={
            <React.Fragment>
              <Memo(Connect(EditPost)) />
            </React.Fragment>
          }
        />
      </div>
    </div>
  </PostAriaLabelDiv>
</ContextProvider>
`;

exports[`Post should not remove post--highlight class after timeout so the classes for permalink are not applied 1`] = `
<ContextProvider
  value={
    Object {
      "handlePopupOpened": [Function],
    }
  }
>
  <PostAriaLabelDiv
    aria-atomic={true}
    className="a11y__section post post--highlight  other--root  "
    data-testid="postView"
    id="post_post1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    post={
      Object {
        "id": "post1",
        "is_pinned": false,
      }
    }
    role="listitem"
    tabIndex={0}
  >
    <Connect(injectIntl(PostPreHeader))
      isFlagged={false}
      isPinned={false}
    />
    <div
      aria-hidden={true}
      className="post__content "
      data-testid="postContent"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={false}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
        />
      </div>
      <div>
        <Connect(PostHeader)
          colorizeUsernames={false}
          compactDisplay={false}
          handleCardClick={[Function]}
          handleCommentClick={[Function]}
          handleDropdownOpened={[Function]}
          hover={false}
          isFirstReply={true}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
          showTimeWithoutHover={true}
        />
        <AutoHeightSwitcher
          onTransitionEnd={[Function]}
          shouldScrollIntoView={false}
          showSlot={1}
          slot1={
            <React.Fragment>
              <Memo(Connect(PostBody))
                compactDisplay={false}
                handleCommentClick={[Function]}
                handleFileDropdownOpened={[Function]}
                isCommentMention={false}
                isFirstReply={true}
                post={
                  Object {
                    "id": "post1",
                    "is_pinned": false,
                  }
                }
              />
            </React.Fragment>
          }
          slot2={
            <React.Fragment>
              <Memo(Connect(EditPost)) />
            </React.Fragment>
          }
        />
      </div>
    </div>
  </PostAriaLabelDiv>
</ContextProvider>
`;

exports[`Post should not remove post--highlight class after timeout so the classes for permalink are not applied 2`] = `
<ContextProvider
  value={
    Object {
      "handlePopupOpened": [Function],
    }
  }
>
  <PostAriaLabelDiv
    aria-atomic={true}
    className="a11y__section post  other--root  "
    data-testid="postView"
    id="post_post1"
    onClick={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    post={
      Object {
        "id": "post1",
        "is_pinned": false,
      }
    }
    role="listitem"
    tabIndex={0}
  >
    <Connect(injectIntl(PostPreHeader))
      isFlagged={false}
      isPinned={false}
    />
    <div
      aria-hidden={true}
      className="post__content "
      data-testid="postContent"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={false}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
        />
      </div>
      <div>
        <Connect(PostHeader)
          colorizeUsernames={false}
          compactDisplay={false}
          handleCardClick={[Function]}
          handleCommentClick={[Function]}
          handleDropdownOpened={[Function]}
          hover={false}
          isFirstReply={true}
          post={
            Object {
              "id": "post1",
              "is_pinned": false,
            }
          }
          showTimeWithoutHover={true}
        />
        <AutoHeightSwitcher
          onTransitionEnd={[Function]}
          shouldScrollIntoView={false}
          showSlot={1}
          slot1={
            <React.Fragment>
              <Memo(Connect(PostBody))
                compactDisplay={false}
                handleCommentClick={[Function]}
                handleFileDropdownOpened={[Function]}
                isCommentMention={false}
                isFirstReply={true}
                post={
                  Object {
                    "id": "post1",
                    "is_pinned": false,
                  }
                }
              />
            </React.Fragment>
          }
          slot2={
            <React.Fragment>
              <Memo(Connect(EditPost)) />
            </React.Fragment>
          }
        />
      </div>
    </div>
  </PostAriaLabelDiv>
</ContextProvider>
`;
